@@ -1,2 +1,1 @@
 oem-config: no-debconf-config
-oem-config: debconf-is-not-a-registry ./usr/lib/oem-config/menu/timezone
