@@ -1,4 +1,3 @@
 [type: gettext/rfc822deb] oem-config.templates
-[type: gettext/rfc822deb] ../menu/timezone.templates
 [type: gettext/rfc822deb] ../menu/exit.templates
 [type: gettext/rfc822deb] oem-config-udeb.templates
