@@ -1,147 +1,0 @@
-<?xml version="1.0" ?>
-<glade-interface>
-    <widget class="GtkDialog" id="dialog">
-        <property name="title" context="True" translatable="True">Time zone configuration</property>
-        <property name="resize_mode">queue</property>
-        <property name="events"></property>
-        <property name="window_position">center-on-parent</property>
-        <property name="type_hint">dialog</property>
-        <property name="gravity">center</property>
-        <property name="visible">True</property>
-        <child internal-child="vbox">
-            <widget class="GtkVBox" id="dialog-vbox">
-                <property name="border_width">2</property>
-                <property name="events"></property>
-                <property name="visible">True</property>
-                <child>
-                    <widget class="GtkVBox" id="vbox1">
-                        <property name="border_width">6</property>
-                        <property name="events"></property>
-                        <property name="spacing">6</property>
-                        <property name="visible">True</property>
-                        <child>
-                            <widget class="GtkCheckButton" id="utc_button">
-                                <property name="is_focus">True</property>
-                                <property name="label" context="True" translatable="True">Is the hardware clock set to GMT?</property>
-                                <property name="events"></property>
-                                <property name="can_focus">True</property>
-                                <property name="draw_indicator">True</property>
-                                <property name="visible">True</property>
-                            </widget>
-                            <packing/>
-                        </child>
-                        <child>
-                            <widget class="GtkTable" id="table1">
-                                <property name="row_spacing">6</property>
-                                <property name="column_spacing">6</property>
-                                <property name="events"></property>
-                                <property name="n_rows">2</property>
-                                <property name="n_columns">2</property>
-                                <property name="visible">True</property>
-                                <child>
-                                    <widget class="GtkLabel" id="geographic_area_label">
-                                        <property name="label" context="True" translatable="True">Area for your time zone:</property>
-                                        <property name="events"></property>
-                                        <property name="xalign">1.0</property>
-                                        <property name="visible">True</property>
-                                    </widget>
-                                    <packing>
-                                        <property name="x_options">fill</property>
-                                    </packing>
-                                </child>
-                                <child>
-                                    <widget class="GtkComboBox" id="geographic_area_combo">
-                                        <property name="events"></property>
-                                        <property name="visible">True</property>
-                                    </widget>
-                                    <packing>
-                                        <property name="left_attach">1</property>
-                                        <property name="right_attach">2</property>
-                                    </packing>
-                                </child>
-                                <child>
-                                    <widget class="GtkLabel" id="select_zone_label">
-                                        <property name="label" context="True" translatable="True">Select a city or time zone:</property>
-                                        <property name="events"></property>
-                                        <property name="xalign">1.0</property>
-                                        <property name="visible">True</property>
-                                    </widget>
-                                    <packing>
-                                        <property name="bottom_attach">2</property>
-                                        <property name="x_options">fill</property>
-                                        <property name="top_attach">1</property>
-                                    </packing>
-                                </child>
-                                <child>
-                                    <widget class="GtkComboBox" id="select_zone_combo">
-                                        <property name="events"></property>
-                                        <property name="visible">True</property>
-                                    </widget>
-                                    <packing>
-                                        <property name="left_attach">1</property>
-                                        <property name="bottom_attach">2</property>
-                                        <property name="top_attach">1</property>
-                                        <property name="right_attach">2</property>
-                                    </packing>
-                                </child>
-                            </widget>
-                            <packing>
-                                <property name="position">1</property>
-                            </packing>
-                        </child>
-                    </widget>
-                    <packing>
-                        <property name="padding">6</property>
-                        <property name="position">2</property>
-                    </packing>
-                </child>
-                <child>
-                    <placeholder/>
-                    <packing>
-                        <property name="expand">False</property>
-                        <property name="position">3</property>
-                    </packing>
-                </child>
-                <child internal-child="action_area">
-                    <widget class="GtkHButtonBox" id="dialog-action_area">
-                        <property name="border_width">5</property>
-                        <property name="events"></property>
-                        <property name="spacing">10</property>
-                        <property name="layout_style">end</property>
-                        <property name="visible">True</property>
-                        <child>
-                            <widget class="GtkButton" id="button_ok">
-                                <property name="receives_default">True</property>
-                                <property name="label">gtk-ok</property>
-                                <property name="use_underline">True</property>
-                                <property name="events"></property>
-                                <property name="use_stock">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="visible">True</property>
-                            </widget>
-                            <packing/>
-                        </child>
-                        <child>
-                            <widget class="GtkButton" id="button_cancel">
-                                <property name="receives_default">True</property>
-                                <property name="label">gtk-cancel</property>
-                                <property name="use_underline">True</property>
-                                <property name="events"></property>
-                                <property name="use_stock">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="visible">True</property>
-                            </widget>
-                            <packing>
-                                <property name="position">1</property>
-                            </packing>
-                        </child>
-                    </widget>
-                    <packing>
-                        <property name="pack_type">end</property>
-                        <property name="expand">False</property>
-                    </packing>
-                </child>
-            </widget>
-        </child>
-    </widget>
-</glade-interface>
