@@ -1,3 +1,0 @@
-Order: 30
-Asks: ^tzconfig/
-Extra-Templates: /var/lib/dpkg/info/base-config.templates
