@@ -1,3 +1,0 @@
-Template: oem-config/menu/timezone
-Type: text
-_Description: Configure timezone
